k8s/develop/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  namespace: develop
spec:
  selector:
    matchLabels:
      app: mongodb
      type: database
  serviceName: mongo-statefulset
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
        type: database
    spec:
      containers:
      - name: mongo-container
        image: mongo:6.0.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort:  27017
        volumeMounts:
        - name: mongo-pvc
          mountPath: /data/db
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: mongo-pvc
      spec:
        storageClassName: manual
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Mi
