k8s/develop/board-games-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-games-api-service
  namespace: develop
spec:
  type: ClusterIP
  selector:
    app: board-games-api
    type: backend
  ports:
  - port: 4000
    targetPort: 4000
